--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,3 +2,4 @@ include LICENSE
 include README.md
 include celigo_pipeline_automation_paper/templates/*
 include celigo_pipeline_automation_paper/pipelines/*
+include celigo_pipeline_automation_paper/bin/resource_paths.json
