--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ requires-python = ">=3.9.2"
 
 dependencies = [
     "Jinja2 ~= 3.1.2",
-    # "numpy ~= 1.23.0",
-    # "Cellprofiler ~= 4.2.4",   
+    "Cellprofiler ~= 4.2.4",   
 ]
 
 
